- Supports DCDT-101 and DCDT-102. - Switched Cargo Maven plugin executions to those of the Tomcat 7 Maven plugin for integration test temporary webapp container setup.