@@ -318,24 +318,6 @@
                 <version>1.11</version>
             </dependency>
             <dependency>
-                <groupId>org.glassfish</groupId>
-                <artifactId>javax.servlet</artifactId>
-                <version>3.1.1</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.glassfish.web</groupId>
-                <artifactId>javax.el</artifactId>
-                <version>2.2.6</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.glassfish.web</groupId>
-                <artifactId>javax.servlet.jsp</artifactId>
-                <version>2.3.2</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
                 <groupId>org.glassfish.web</groupId>
                 <artifactId>javax.servlet.jsp.jstl</artifactId>
                 <version>1.2.2</version>
@@ -1137,62 +1119,6 @@
                     <inherited>true</inherited>
                     <configuration>
                         <repositoryLayout>flat</repositoryLayout>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.cargo</groupId>
-                    <artifactId>cargo-maven2-plugin</artifactId>
-                    <version>1.4.5</version>
-                    <inherited>true</inherited>
-                    <configuration>
-                        <container>
-                            <containerId>jetty9x</containerId>
-                            <dependencies>
-                                <dependency>
-                                    <groupId>javax.el</groupId>
-                                    <artifactId>javax.el-api</artifactId>
-                                </dependency>
-                                <dependency>
-                                    <groupId>javax.servlet</groupId>
-                                    <artifactId>javax.servlet-api</artifactId>
-                                </dependency>
-                                <dependency>
-                                    <groupId>javax.servlet.jsp</groupId>
-                                    <artifactId>javax.servlet.jsp-api</artifactId>
-                                </dependency>
-                                <dependency>
-                                    <groupId>javax.servlet.jsp.jstl</groupId>
-                                    <artifactId>javax.servlet.jsp.jstl-api</artifactId>
-                                </dependency>
-                                <dependency>
-                                    <groupId>org.glassfish</groupId>
-                                    <artifactId>javax.servlet</artifactId>
-                                </dependency>
-                                <dependency>
-                                    <groupId>org.glassfish.web</groupId>
-                                    <artifactId>javax.el</artifactId>
-                                </dependency>
-                                <dependency>
-                                    <groupId>org.glassfish.web</groupId>
-                                    <artifactId>javax.servlet.jsp</artifactId>
-                                </dependency>
-                                <dependency>
-                                    <groupId>org.glassfish.web</groupId>
-                                    <artifactId>javax.servlet.jsp.jstl</artifactId>
-                                </dependency>
-                                <dependency>
-                                    <groupId>taglibs</groupId>
-                                    <artifactId>standard</artifactId>
-                                </dependency>
-                            </dependencies>
-                            <type>embedded</type>
-                        </container>
-                        <configuration>
-                            <properties>
-                                <cargo.jvmargs>-Xms512m -Xmx768m -XX:PermSize=256m -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled</cargo.jvmargs>
-                            </properties>
-                        </configuration>
-                        <wait>true</wait>
                     </configuration>
                 </plugin>
                 <plugin>
